# rust_one_weekend

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  shell.nix
src/: bvhiter.rs  camera.rs  main.rs  material.rs  object.rs  render.rs  scene.rs  shared.rs
