[package]
name = "one_weekend"
version = "0.1.0"
authors = ["Matthijs De Smedt <matthijsds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.2"
crossbeam = "0.6"
crossbeam-channel = "0.4"
glam = "0.13.0"
scoped_threadpool = "0.1.9"
bvh = "0.5.0"
rand = "0.8.3"
spiral = "0.1.9"
png = "0.16.8"
num_cpus = "1.13.0"
rand_pcg = "0.3.0"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
init_with = "1.1.0"

[profile.release]
lto = true
codegen-units = 1
