[package]
name = "one_weekend"
version = "0.1.0"
authors = ["Matthijs De Smedt <matthijsds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.28.0"
glam = "0.30.0"
nalgebra = "0.33.2"
bvh = "0.11.0"
rand = "0.9.0"
png = "0.17.16"
num_cpus = "1.16.0"
rand_xoshiro = "0.7.0"
rayon = "1.10.0"
crossbeam-channel = "0.5.14"

[profile.release]
lto = true
codegen-units = 1
